# BRAINSStandAlone

./: CMakeLists.txt
BRAINSCommonLib/: itkLargestForegroundFilledMaskImageFilter.hxx
ReferenceAtlas/: 20110511Atlas.mrml.md5  ALLPVAIR.nii.gz.md5  ALLPVBASALTISSUE.nii.gz.md5  ALLPVCRBLGM.nii.gz.md5  ALLPVCRBLWM.nii.gz.md5  ALLPVCSF.nii.gz.md5  ALLPVNOTCSF.nii.gz.md5  ALLPVNOTGM.nii.gz.md5  ALLPVNOTVB.nii.gz.md5  ALLPVNOTWM.nii.gz.md5  ALLPVSURFGM.nii.gz.md5  ALLPVVB.nii.gz.md5  ALLPVWM.nii.gz.md5  AtlasPVDefinition.xml.in  AtlasPVDefinition.xml.in.md5  CMakeLists.txt  MoveToNewScript.sh.md5  NAC_MODEL_1000_unsegmented_region_of_left_insula.vtk.md5  NAC_MODEL_1001_left_superior_temporal_gyrus_(banks_of_left_superior_temporal_sulcus).vtk.md5  NAC_MODEL_1002_caudal_part_of_left_anterior_cingulate_gyrus.vtk.md5  NAC_MODEL_1003_posterior_part_of_left_middle_frontal_gyrus.vtk.md5  NAC_MODEL_1005_left_cuneus.vtk.md5  NAC_MODEL_1006_left_ambiens_gyrus.vtk.md5  NAC_MODEL_1007_left_fusiform_gyrus.vtk.md5  NAC_MODEL_1008_unsegmented_region_of_left_inferior_parietal_lobule.vtk.md5  NAC_MODEL_1009_left_inferior_temporal_gyrus.vtk.md5  NAC_MODEL_100_left_mammillothalamic_tract.vtk.md5  NAC_MODEL_1010_isthmus_of_left_cingulate_gyrus.vtk.md5  NAC_MODEL_1011_left_lateral_occipital_gyrus.vtk.md5  NAC_MODEL_1012_left_lateral_orbital_gyrus.vtk.md5  NAC_MODEL_1013_left_lingual_gyrus.vtk.md5  NAC_MODEL_1014_left_straight_gyrus.vtk.md5  NAC_MODEL_1015_left_middle_temporal_gyrus.vtk.md5  NAC_MODEL_1016_left_parahippocampal_gyrus.vtk.md5  NAC_MODEL_1017_left_paracentral_lobule.vtk.md5  NAC_MODEL_1018_opercular_part_of_left_inferior_frontal_gyrus.vtk.md5  NAC_MODEL_1019_orbital_part_of_left_inferior_frontal_gyrus.vtk.md5  NAC_MODEL_1020_triangular_part_of_left_inferior_frontal_gyrus.vtk.md5  NAC_MODEL_1021_left_visual_cortex.vtk.md5  NAC_MODEL_1022_left_postcentral_gyrus.vtk.md5  (+136 more)
ReferenceAtlas/probabilityMaps/: l_accumben_ProbabilityMap.nii.gz.md5  l_caudate_ProbabilityMap.nii.gz.md5  l_globus_ProbabilityMap.nii.gz.md5  l_hippocampus_ProbabilityMap.nii.gz.md5  l_putamen_ProbabilityMap.nii.gz.md5  l_thalamus_ProbabilityMap.nii.gz.md5  r_accumben_ProbabilityMap.nii.gz.md5  r_caudate_ProbabilityMap.nii.gz.md5  r_globus_ProbabilityMap.nii.gz.md5  r_hippocampus_ProbabilityMap.nii.gz.md5  r_putamen_ProbabilityMap.nii.gz.md5  r_thalamus_ProbabilityMap.nii.gz.md5
ReferenceAtlas/spatialImages/: phi.nii.gz.md5  theta.nii.gz.md5
SuperBuild/: External_ITKv4.cmake  External_ReferenceAtlas.cmake
